# SmallExchangeServer

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: ci.yml  codeql-analysis.yml
configured_files/: config.hpp.in
src/: CMakeLists.txt  epoll_impl.cpp  epoll_impl.h  exchange_server.cpp  exchange_server.h  main.cpp  market.cpp  market.h  order.cpp  order.h  result.h  scope_exit.cpp  scope_exit.h  socket_impl.cpp  socket_impl.h  utilities.cpp  utilities.h  worker.cpp  worker.h
test/: CMakeLists.txt  exchange_server_tests.cpp  mocks.cpp  mocks.h  order_tests.cpp  strand_tests.cpp  tests.cpp
